Fixed Bug Where Menu was Covered
Fixed a bug where the pictures for the Frameworks skills would cover the menu when it was open.

--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@
 }
 
 #nav {
+    z-index: 10;
     position: fixed;
     top: 20px;
     left: 20px;
